istio-gateway/peer.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "istio-perrauth"
  namespace: "sample"
spec:
  mtls:
    mode: PERMISSIVE
