istio-gateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      testing: ab
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        testing: ab
        version: v1
    spec:
      containers:
        - name: c1
          image: chaitu1812/nginx:v1.0.0
          ports:
            - containerPort: 80
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      testing: ab
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        testing: ab
        version: v2
    spec:
      containers:
        - name: c1
          image: chaitu1812/nginx:v2.0.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sample
spec:
  selector:
    app: nginx
    testing: ab
    version: v1

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http-web

---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
  namespace: sample

spec:
  selector:
    app: nginx
    testing: ab
    version: v2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http-web
