istio-gateway/1.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: sample-gt1
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "nginx1.chaithanya.cloud"
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: https
        protocol: HTTP
      hosts:
        - "nginx1.chaithanya.cloud"
