istio-gateway/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx
  namespace: sample
spec:
  hosts:
    - "nginx.chaithanya.cloud"
  http:
    - route:
        - destination:
            host: nginx-svc
            subset: v1
          weight: 90
        - destination:
            host: nginx-svc
            subset: v2
          weight: 10


---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: my-destination-rule
  namespace: sample
spec:
  host: nginx-svc
  subsets:
    - name: v1
      labels:
        version: v1
        app: nginx
        testing: ab
    - name: v2
      labels:
        version: v2
        app: nginx
        testing: ab
