istio-gateway/autorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: sample
spec:
  selector:
    matchLabels:
      app: nginx
      testing: ab
      version: v2
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
